k8s/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql-deploy
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-deploy
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        resources: {}
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql-pv-storage
      volumes:
      - name: mysql-pv-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
